Fix extra padding above footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -57,7 +57,7 @@ body {
 }
 
 .no-padding-top {
-  padding-bottom: 0;
+  padding-top: 0;
 }
 
 .button {
